--- a/fry-duec/index.html
+++ b/fry-duec/index.html
@@ -18,25 +18,47 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <h3>
+               A Complete System Is More Than the Sum of Its Parts.
+            </h3>
+               <p>
+                  Systems thinking is a design philosophy that focuses not only on the elements that make up a system but also on the relationships between them (Crawley, 2022). To put it more clearly, the ways in which elements interact with, and influence each other is the focus of systems thinking just as much as the literal components that make up the system. Systems thinking can help people understand their role in a wider sense (Holt, 2021, p. 57). Using systems thinking we can become more effective designers, ensuring that all components within a system perform at max capacity and using past failures as learning opportunities rather than as an end point.
+               </p>
+            <h3>
+               Systems Thinking in Action
+            </h3>
+               <p>
+                  To understand system thinking in play, one can think of the reintroduction of wolves to Yellowstone. Originally, gray wolves in the Yellowstone area were hunted to extinction by ranchers worried about their livestock in the early 1900s (Peglar, 2022). However, without the wolves, the local ecosystem took a sharp turn. Without pressure from predators to stay on the move, elk would overgraze one area before going to the next (Peglar, 2022). As a result of overgraze, plant mass around the park took a sharp decline (Peglar, 2022). The extinction of wolves within the park caused a harsh domino effect that caused harm to even the most unexpected groups. Despite what on the surface seems like a good deal to the wolf’s prey animal, elk; it actually caused a sharp decline overtime for the elk population as well, as it was now at a third of what it was before the absence of wolves (Peglar, 2022).
+               </p>
+            <h3>
+               Systems Thinking Vs. Linear Thinking
+            </h3>
+               <p>
+                  Systems thinking leads to deeper analysis than ordinary linear thinking. Systems thinking carefully considers the role of each element within a system. The role of each element, how one element affects another, causality, the hierarchy of elements. Rather than examining an incident at face value, systems thinking digs deeper into the why and how of what something is. Understanding the deeper reasons behind a consequence and gaining more perspective will leave one more informed.
+               </p>
+            <h3>
+               What Is MBSE And How It Can Be Used to Create Complex Digital Systems
+            </h3>
+               <p>
+                  Model-based systems engineering, or MBSE, is a design methodology that focuses on using domain models as the primary means of documenting information (Holt, 2021, p. 32). A domain model is the visual representation of a system, documenting elements and the relationships between them (Holt, 2021, p. 40). MSBE also takes advantage of data modeling to help design new systems (Holt, 2021, p. 51). Using models to simulate systems allows engineers to verify and adjust plans as needed.  MSBE replaces old approaches and focuses on retaining a clear centralized source of information for future references. Systems thinking is an accompanying method of thought that approaches the same concepts as MSBE. Used in conjunction, these approaches are best for creating complex digital systems.
+               </p>
+            <h3>
+               Conclusion
+            </h3>
+               <p>
+                  Systems thinking is useful not only for technical applications but also for anyone who wishes to gain a greater understanding of something. Systems thinking puts equal importance on the relationship between separate elements just as much as the literal elements themselves. Engineers using the MBSE approach gain the most insight from using systems thinking to design projects and understand simulated results. Life is made up of interconnected events that decide our fates, systems thinking not only seeks to understand a conclusion but all factors that create a domino effect of cause and effect.
+               </p>
             <footer class="article-footer">
                 <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
+                  <ol>
+                     <li>Crawley, E. (2022, October 3). <em>Ask an MIT Professor: What Is System Thinking and Why Is It Important? | Open Learning.</em>. Openlearning.mit.edu.<a href="https://openlearning.mit.edu/news/ask-mit-professor-what-system-thinking-and-why-it-important">https://openlearning.mit.edu/news/ask-mit-professor-what-system-thinking-and-why-it-important</a></li>
+                     </ol>
+                  <ol>
+                     <li>Holt, J. (2021). <em>Systems Engineering Demystifying : a practitioner’s handbook for developing complex systems using a model-based approach.</em> Birmingham ; Mumbai Packt.</li>
+                     </ol>
+                     <ol>
+                     <li>Peglar, T. (2022, May 13). <em>1995 Reintroduction of Wolves in Yellowstone.</em>Yellowstone National Park. <a href="https://www.yellowstonepark.com/park/conservation/yellowstone-wolves-reintroduction/">https://www.yellowstonepark.com/park/conservation/yellowstone-wolves-reintroduction/</a></li>
+                     </ol>   
             </footer>
          </article>
 
