Added blog post 1.1 to beala/index.html Modified styles in beala/css/styles.css Added images model_of_communication.svg and tree_swing_cartoon.webp to beala/images/

--- a/beala/index.html
+++ b/beala/index.html
@@ -4,6 +4,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="css/styles.css" rel="stylesheet">
+      <meta name="author" content="Ashy Beal">
+      <meta name="description" content="A CWU student's portfolio of IT Management topics covered in class.">
       <title>Ashy Beal | Portfolio</title>
    </head>
    <body>
@@ -18,25 +20,121 @@
             <header class="article-header">
                <h2>Module 1.1 Blog Post</h2>
             </header>
-            <h3>Health Cronut la Croix</h3>
-            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
-            <h3>Offal Tofu Cred Green Juice</h3>
-            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
-            <h3>Blue Roof Pour-Over Man Bun</h3>
-            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
-            <ul>
-               <li>Neutra umami slow-carb vegan dreamcatcher.</li>
-               <li>Tacos cornhole humblebrag ethical.</li>
-               <li>DSA santo big mood organic charcoal bitters.</li>
-               <li>Hot chicken pitchfork poutine.</li>
-            </ul>
-            <h3>Mlkshk Stumptown Hot Chicken</h3>
-            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <h3>Systems and System Engineering</h3>
+               <div class="hook">
+                  <b>Stakeholders, Project Managers, and Engineers:</b>
+                  <p class="half-spacing">Trouble managing your project's complexity?</p>
+                  <p class="half-spacing">Projects too complex for stakeholder understanding?</p>
+                  <p class="half-spacing">Documentation keeping your team out of sync?</p>
+                  <b>Systems Engineering might be right for you!</b>
+               </div>
+            <h3>What's a system?</h3>
+               <p>Before diving into Systems Engineering, let's build some context. First we need to understand what a system is.</p>
+            <h4>What is a System?</h4>
+               <p>First, let's build context as to what we mean by "system". Below is an academic definition of Systems Theory:</p>
+               <blockquote>Systems theory "is a conceptual framework based on the principle that the component parts of a system can best be understood in the context of the relationships with each other and with other systems, rather than in isolation" (Wilkinson, 2011).</blockquote>
+               <p>Albeit longwinded, this definition tells us that:</p>
+               <ul>
+                  <li>A system is a framework--something we observe (weather system), or physical (an audio system). Different types will be discussed below.</li>
+                  <li>Systems theory focuses on a system's relationships with other systems. This implies there are lots of systems--each of which is referred to as a System Element.</li>
+               </ul>
+               <p>Today the International Council on Systems Engineering (INCOSE) manages standardizations for Systems Engineering, with 70+ chapters worldwide. INCOSE defines Systems Engineering in relatively simplistic terms:</p>
+               <p>"The realization of successful systems" (2019)</p>
+               <p>Of course, this definition does not mean much without any context.</p>
+               <p>Holt and Perry expand on the definition, "a multi-disciplinary, common-sense approach that enables the realization of successful systems" (2019). </p>
+               <p>To better understand systems and system elements, let's use a grocery store as an example. In a grocery store, various departments such as the bakery, produce, and meat sections function as system elements within the larger grocery store system. Each of these departments can be considered a system element.</p>
+               <p>We can "zoom in" to break a system down into smaller system elements--like the various departments in a grocery store. We can also "zoom out" to understand the operations of the grocery store's business at a market, district, national, or global level.</p>
+               <p>Systems can come in different types. Peter Checkland's system classifications divide systems into five different types, and is one of the most widely used definition for systems (Holt, 2023). Below are examples of each type of system.</p>
+            <h3>Checkland's Five System Types</h3>
+               <p></p>
+               <dl>
+                  <dt>Natural Systems</dt>
+                  <dd>Systems beyond our control, such as the weather, time, and natural disasters.</dd>
+                  <dt>Designed Physical Systems</dt>
+                  <dd>The most common definition for a system--hardware. This can range from computers, tablets and phones to cars, planes, and satellites.</dd>
+                  <dt>Designed Abstract Systems</dt>
+                  <dd>Systems without a physical form used to explain ideas or concepts. This document's topic--Model Based System Engineering (MBSE)--is one example of a designed abstract system. Philosophical thought experiments and mathematical equations also fall under this classification.</dd>
+                  <dt>Human Activity Systems</dt>
+                  <dd>People-based systems, such as social groups, political systems, and services for people.</dd>
+                  <dt>Transcendental Systems</dt>
+                  <dd>Systems beyond human understanding--deities, black holes, and how AI works.</dd>
+               </dl>
+               <p>Systems can fall into multiple classifications. In our grocery store example, the store is both a designed physical system and an activity system. No matter what type a system is, they all have a common set of characteristics (Holt, 2023). The following list introduces each of these characteristics.</p>
+            <h3>System Characteristics</h3>
+               <dl>
+                  <dt>System Elements</dt>
+                  <dd>The parts that make up a system. In our grocery store example, the bakery, produce, and meat sections are all elements of the grocery store system.</dd>
+                  <dt>System Stakeholders</dt>
+                  <dd>The people who have an interest in the system. For a grocery store, stakeholders include customers, employees, and suppliers.</dd>
+                  <dt>System Attributes</dt>
+                  <dd>The properties or qualities of a system. A grocery store's attributes might include its size, location, and product variety.</dd>
+                  <dt>System Boundaries</dt>
+                  <dd>The limits that define what is inside and outside the system. The physical walls of our grocery store defines the physical boundaries of the grocery store's system.</dd>
+                  <dt>System Needs</dt>
+                  <dd>The requirements or demands that a system must satisfy. For our grocery store, needs includes providing fresh products, ensuring customer safety, and maintaining profitability.</dd>
+                  <dt>System Constraints</dt>
+                  <dd>The limitations or restrictions that affect the system. Our grocery store's constraints include budget, regulatory requirements, and physical space.</dd>
+               </dl>
+               <p>In systems theory, understanding these characteristics assists in analyzing and designing successful systems.</p>
+            <h3>Systems Engineering</h3>
+               <p>Systems Engineering is, simply put, the use of the systems above to design and manage complex systems throughout their existence, or life cycle. The more complex a system is, the more difficult it is to manage without an organized or structured approach.</p>
+               <p>Systems engineering provides structured processes and methodologies to manage complexity. This, in turn, enhances communication, enabling a shared understanding among stakeholders. With systems engineering principles, organizations can improve project outcomes, resulting in successful systems that meet stakeholder needs.</p>
+               <h3>Identify the need for system engineering:</h3>
+               <p>In the text <i>Systems engineering demystified: A practitioner's handbook for developing complex systems using a model-based approach</i>, there are "three evils" to be aware of in Systems Engineering: Complexity, Understanding, and Communication (Holt, 2021).</p>
+            <dl>
+                  <dt>Complexity</dt>
+                  <dd>Systems are becoming increasingly complex, making them difficult to manage without a structured approach.</dd>
+                  <dt>Understanding</dt>
+                  <dd>Different stakeholders may have different interpretations of the same system, leading to misunderstandings.</dd>
+                  <dt>Communication</dt>
+                  <dd>Effective communication is crucial for successful systems engineering, but it can be challenging due to the complexity and diverse perspectives of stakeholders.</dd>
+            </dl>
+               <p>Tree Swing Cartoon: Stakeholders  "understand" the same project in different ways. In the cartoon below, each panel represents a radically different--albeit exaggerated--understanding of a "simple" tire swing.</p>
+               <img src="images/tree_swing_cartoon.webp" alt="Tree Swing Cartoon" width="100%"citation="https://medium.com/@thx2001r/the-project-cartoon-root-cause-5e82e404ec8a"/>
+               <p>The tree swing cartoon is one of my favorite examples of how misunderstandings can deny us of our success. It also shows just how complex systems can be, even something as simple as a tire swing.</p>
+               <p>Successful communication requires both the sender and receiver to understand the definitions and semantics of words used. Systems engineering oftentimes includes the use of domain-specific-language like SysML to prevent communication mishaps.</p>
+               <p>When multiple documents defining a single system, it is unlikely everyone is one the same page--literally and figuratively. With multiple "sources of truth" that are unlikely to all be up to date, out-of-sync teams can make some very costly mistakes.</p>
+               <p>examples:</p>
+               <ul>
+                  <li>NASA's $125 Systems Engineering mistake: NASA and Lockheed Martin used different units of measurements (metric Newtons and English units, respectively) in navigation calculations for the Mars Climate Orbiter. This mistake costed NASA $125 million in September of 1999. (https://www.science.org/content/article/english-metric-miscue-doomed-mars-mission)</li>
+                  <li>A roller coaster's 1995 master plans were converted from English to Metric units in 2002. With multiple versions of the ride's plans, conversion errors were made, and the wrong size axel was  ordered. Two years later, the roller coaster, derailing Tokyo Disneyland's Space Mountain roller coaster. (https://www.cnn.com/TECH/space/9909/30/mars.metric.02/), (https://spacemath.gsfc.nasa.gov/weekly/6Page53.pdf)</li>
+               </ul>
+               <p>Different jobs, responsibilities, and backgrounds, and interests provide us with different insights and different viewpoints. In other words, context differs between people, creating (excellent) opportunities of communication breakdown. While this can create a superior product that one person alone cannot create, this can also create different understandings.</p>
+               <p>All of these different people are stakeholders, and generally fall into three categories:</p>
+               <dl>
+                  <dt>Customers</dt>
+                  <dd>People interacting with the system's end product--the main beneficiaries.</dd>
+                  <dt>Suppliers</dt>
+                  <dd>People that develop and deliver the system--manufacturer employees such as engineers.</dd>
+                  <dt>External</dt>
+                  <dd>People in roles that can influence the limits or restrict the system in some way--clients, auditors and investors.</dd>
+               </dl>
+               <p>Each of these stakeholders naturally have different understandings; that is to say, they have different contexts. The meaning of a statement, a problem or a need of a system might are interpreted differently, like the tree swing cartoon above.</p>
+            <h3>Communication Breakdown</h3>
+               <p>Communication breakdown can happen...</p>
+               <ul>
+                  <li>person-to-person</li>
+                  <li>organization-to-organization</li>
+                  <li>system-to-system/inside a system</li>
+               </ul>
+               <p>Systems engineering provides structured processes and methodologies to manage complexity, enhance communication, and ensure a shared understanding among stakeholders. By adopting systems engineering principles, organizations can improve project outcomes and deliver successful systems that meet stakeholder needs.</p>
+               <img src="images/model_of_communication.svg" alt="Communication model depicting a sender and reciever communicating via a channel; each message is encoded and decoded while potential noise interferes with the process." width="100%" citation="https://en.wikipedia.org/wiki/Communication_model"/>
+               By <a href="//commons.wikimedia.org/wiki/User:Phlsph7" title="User:Phlsph7">Phlsph7</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=125956073">Link</a>
+               <p>One way to mitigate these communication breakdowns and handle the complexity of modern systems is to move away from document-based approaches and towards specific, rigorous models. Standardizations such as SysML and methodologies like MBSE provide frameworks to achieve this.</p>
+            <h3>Model-Based Systems Engineering</h3>
+               <p>Model-Based Systems Engineering (MBSE) is the formalized application of modeling to support system requirements, design, analysis, verification, and validation activities beginning in the conceptual design phase and continuing throughout development and later life cycle phases (INCOSE, 2019). Essentially, MBSE creates a "living" blueprint of the system that helps align all stakeholders.</p>
+            <h3>Defining Modeling with MBSE</h3>
+               <p>In MBSE, a "model" isn't just a 3D shape or a toy replica. Instead, it serves as a simplified abstraction of a system that represents reality for a specific purpose. These models act as a single source of truth, reducing the ambiguity found in written documents and ensuring that when one part of the system changes, the impact is immediately visible across the entire design.</p>
             <footer class="article-footer">
-                <h3>Sources:</h3>
-                <ol>
-                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
-                    </ol>
+                  <div class="sources">
+                     <b>Sources:</b>
+                     <ul class="source-list">
+                        <li>Holt, J. (2021). Systems engineering demystified: A practitioner's handbook for developing complex systems using a model-based approach. Packt Publishing.</li>
+                        <li>Johnson, J. (2021). Designing with the mind in mind: Simple guide to understanding user interface design guidelines (3rd ed). Morgan Kaufmann publishers.</li>
+                        <li>Reiter, J. (2020, March 13). The “project cartoon” root cause. Medium. https://medium.com/@thx2001r/the-project-cartoon-root-cause-5e82e404ec8a</li>
+                        <li>Yablonski, J. (2024). Laws of ux (2nd ed.). O'Reilly Media, Inc.</li>
+                     </ul>
+                  </div>
             </footer>
          </article>
 
