--- a/clarkb/index.html
+++ b/clarkb/index.html
@@ -31,20 +31,28 @@
             <p>In Laws of UX, Yablonski enforces that digital systems need to consider psychological principles – how people will see, interact, and interpret with their interfaces – and that these behaviors have just as much influence on the behavior of systems as technical constraints and more (Yablonski, 2025). This is a representation of a systems perspective, design decisions have the power to create ripple effects through expectations, long-term habits from users, and expectations.</p>
             <p>To contrast, linear thinking could be revamping a websites design and not taking any indication into how it could affect the user base for that website. Decisions, and the mindsets behind them, can cause unforeseen issues with a system, and its performance.</p>
             <h3>Characteristics of Systems Thinking</h3>
-            <ul>
-               <li>1.	Feedback loops and their Behavior: Systems Thinking focuses on how outputs on a system will loop back as inputs, which influences that system behavior in the future. Reinforcing these loops and speed up changes, while keeping them balanced can stabilize behaviors. Linear thinking does not take these variables into account.</li>
-               <li>2.	Emergence: Complex systems will often show behavior categorized as “emergent”, meaning that they cannot be predicted by analyzing components by themselves. For an example, the collective user behavior on a website can project itself as patterns that were never specifically coded for.</li>
-               <li>3.	Mental Models: Systems thinking encourages using the mental models, these are internal representations that form how we interpret a system. Identifying these mental models helps reveal these assumptions and broadens systems boundaries, including people, environments, and policies.</li>
-            </ul>
+
+<!--INSTRUCTOR COMMENT: Rather than add in the numbers with the text, you can use an ordered list as coded below.-->
+
+            <ol>
+               <li>Feedback loops and their Behavior: Systems Thinking focuses on how outputs on a system will loop back as inputs, which influences that system behavior in the future. Reinforcing these loops and speed up changes, while keeping them balanced can stabilize behaviors. Linear thinking does not take these variables into account.</li>
+               <li>Emergence: Complex systems will often show behavior categorized as “emergent”, meaning that they cannot be predicted by analyzing components by themselves. For an example, the collective user behavior on a website can project itself as patterns that were never specifically coded for.</li>
+               <li>Mental Models: Systems thinking encourages using the mental models, these are internal representations that form how we interpret a system. Identifying these mental models helps reveal these assumptions and broadens systems boundaries, including people, environments, and policies.</li>
+            </ol>
+
             <p>These characteristics steeply contrast reductionist, linear approaches that can assume that problems are easily solved by breaking them down into smaller, contextless pieces.</p>
             <h3>Model-Based Approaches</h3>
             <p>While systems thinking provides the framework, utilizing model-based designs gives tools to reason with complex systems. Models can start as simplified representations of the world, diagrams, simulations, maps and more. These overall are mea</p>
             <p>This appraoch is valuable for several reasons:</p>
+
+<!--INSTRUCTOR COMMENT: Now, you can edit this one to create an ordered list.-->
+
             <ul>
                <li>1.	Interdependencies: Models like a causal loop diagram or other system maps can explicitly show relationships. Rather than expecting a developer to know how a microservice can interact with others, these models clearly show those links, along with tracking dependencies, and exposing hidden couplings throughout the system. This is extremely helpful when teams and codebases are massive.</li>
                <li>2.	Scenario Exploration: Models allow designers to test hypothetical scenarios before deploying any actual changes, that way any effects can be observed and compensated for. For an example, digital designers could see how changing an onboarding flow might change user retention and its support load.</li>
                <li>3.	Communication: Models can serve as shared artifacts across different subjects – UX, system engineering, management, developer operations – aligning expectations and production languages. Without these shared models, confusion can arise quickly in decision making.</li>
             </ul>
+            
             <p>The academic piece on SYMBIOSIS emphasizes this point: allowing frameworks and models through systems thinking accessible – especially with AI and machine intelligent systems – dramatically improves formulation for problems and reduce barriers to a better understanding of complex structures (Sethi et al., 2025). This work showcases that models are not optional extras; they act as bridges to simplify super complex dynamics into representations that are much more interpretable.</p>
             <h3>Applications to Digital Design</h3>
             <p>Systems thinking has actual benefits in designing digital systems:</p>
