Added comments to student's code.

--- a/gregsond/index.html
+++ b/gregsond/index.html
@@ -12,12 +12,20 @@
          <!-- Page Header  -->
          <header>
             <h1>Introduction</h1>
+<!--INSTRUCTOR COMMENT: I would reserve this heading for the main title of the page; for example, Portfolio-->
+
             </header>
+
+<!--INSTRUCTOR COMMENT: Add an opening <article> tag here to wrap the first blog content; then, add a heading 2 element in the next line to create the heading for the blog.-->
+
          <p class="blurb-text">Modern digital systems are no longer simple applications running on a single computer. Instead, they are complex environments made up of cloud infrastructure, databases, APIs, security systems, users, and organizations all working together. These systems operate at large scale, change constantly, and interact with other systems in unpredictable ways. Because of this, traditional linear approaches to problem solving and system design are no longer enough.
 To design and manage these environments effectively, engineers and technologists must adopt a different way of thinking. One that focuses on relationships, structure, and interaction rather than isolated components. This mindset is known as systems thinking.
 Systems thinking provides a framework for understanding how complex systems behave and how their parts influence one another. It is a foundational idea in systems engineering and is essential for designing reliable, scalable, and secure digital systems. As digital environments continue to grow in complexity, systems engineering has increasingly moved toward a model-based approach, known as Model-Based Systems Engineering (MBSE), to manage that complexity.
 This blog post defines systems thinking in my own words, explains how it differs from traditional linear thinking, and discusses why a model-based approach is especially useful for designing complex digital systems.</p>
          <header>
+
+<!--This heading can be changed to a heading 3 element.-->
+
             <h2>Defining Systems Thinking</h2>
             </header>
          <p class="blurb-text">Systems thinking is the ability to understand a system by focusing on how its parts interact rather than viewing those parts in isolation. It is a way of thinking that emphasizes relationships, dependencies, and structure instead of just individual components.
@@ -33,6 +41,9 @@ Another defining feature of a system is its boundary. A boundary defines what is
 Stakeholders are another essential part of any system. Stakeholders include users, operators, engineers, managers, regulators, and even other systems. Each stakeholder views the system from a different perspective and has different priorities. A system that works well for one stakeholder may create problems for another. Successful system design requires understanding and balancing these perspectives.
 Finally, systems often exhibit emergent behavior. Emergent behavior is behavior that arises from interactions between elements and cannot be predicted by analyzing components individually. In digital environments, emergent behavior appears in areas such as network congestion, cybersecurity threats, algorithmic bias, and platform scalability. This is one of the main reasons why complex systems cannot be designed using simple cause-and-effect logic alone.</p>
          <header>
+
+<!--INSTRUCTOR COMMENT: Each subsequent heading can be changed to a heading 3 element to create the hierarchy you are looking for. -->
+
             <h4>Traditional Linear Thinking</h4>
             </header>
          <p class="blurb-text">Traditional engineering and management approaches are based on linear thinking. Linear thinking assumes that problems can be broken down into independent parts, solved individually, and then reassembled into a complete solution. This approach works well for simple and stable systems such as mechanical devices, manufacturing processes, and standalone software programs.
@@ -96,6 +107,9 @@ Only systems thinking combined with model-based engineering can manage this leve
 Traditional linear thinking assumes predictability and isolation. Systems thinking recognizes feedback, emergence, and interdependence. As digital systems have grown into vast ecosystems of software, hardware, data, people, and organizations, the need for a model-based approach has become unavoidable.
 Model-Based Systems Engineering provides the structure, language, and discipline required to manage this complexity. By treating the system as a coherent whole, capturing knowledge in integrated models, and aligning stakeholders around a shared representation, MBSE enables the successful realization of complex digital systems.
 In an era of cloud computing, artificial intelligence, and global digital infrastructure, systems thinking is no longer optional. It is the foundation upon which reliable, secure, scalable, and sustainable digital environments are built.</p>
+
+<!--INSTRUCTOR COMMENT: Go ahead and remove this nav section; it's not needed here.-->
+
          <nav>
             <ul>
                <li><a href="portfolio-example">portfolio page</a></li>
@@ -106,6 +120,9 @@ In an era of cloud computing, artificial intelligence, and global digital infras
                <li><a href="website-mockup">website mockup</a></li>
             </ul>
          </nav>
+
+
+         
         <!-- Page Footer -->
          <footer class="page-footer">
             <p>Holt, J. (2023). Systems engineering demystified: Apply modern, model-based systems engineering techniques to build complex systems (2nd ed.). Packt Publishing.</p>
@@ -116,6 +133,9 @@ In an era of cloud computing, artificial intelligence, and global digital infras
          <footer class="page-footer">
             <p>Senge, P. M. (2006). The fifth discipline: The art and practice of the learning organization (Rev. ed.). Doubleday.</p>
          </footer>
+
+<!--INSTRUCTOR COMMENT: Add a closing </article> tag here to close the article element. As we move forward, you'll create additional articles for each blog post.-->
+
       </main>
    </body>
 </html>
