Added comment to student's code.

--- a/hendersons/index.html
+++ b/hendersons/index.html
@@ -32,6 +32,18 @@
                  By applying this to the digital there would be mockups of what the end result should look like so that everyone on the team has an idea of what they are working towards. There would also be lists of what different user groups (Stakeholders) might be expecting to find within the project, an example would be that advertisers would expect places set aside for their ads to be displayed, users would be looking for the ads in question to be non-invasive. A Model Based Approach would make balancing all of the expectations more manageable for a design team and make the end product more put together and coherent in the end.</p>
             <footer class="article-footer">
                 <h3>Sources:</h3>
+
+
+<!--INSTRUCTOR COMMENTS: 
+
+You'll want to resturcture your references to use the ordered list element only once, and then use list items for each reference. For example:
+<ol>
+  <li>First reference</li>
+  <li>Second reference</li>
+</ol>
+-->
+
+
                   <ol>Holt, J (2023). <em>Systems Engineering Demystified</em>. Packt Publishing Ltd.</ol>
                   <ol>Dowdall, J. (2019, July 3). <em>Systems Thinking examples: Learn how to apply by Catalyst Consulting</em>. Catalyst Consulting. <a href="https://www.catalystconsulting.co.uk/systems-thinking-examples/">https://www.catalystconsulting.co.uk/systems-thinking-examples/</a></ol>
                   <ol>Nataliya, S. (2020, December 21). <em>An Introduction to Model-Based Systems Engineering (MBSE)</em>. <a href="https://www.sei.cmu.edu/blog/introduction-model-based-systems-engineering-mbse/">https://www.sei.cmu.edu/blog/introduction-model-based-systems-engineering-mbse/</a></ol>
